<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/beige"
    android:orientation="vertical">

    <EditText
        android:id="@+id/textInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/popup_text"
        android:background="@color/dark_light"
        android:hint="@string/popup_text"
        android:inputType="text"
        android:textColor="@color/beige"
        android:textColorHighlight="@color/beige"
        android:textColorHint="@color/beige"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inputDialogErrorDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="@color/error"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput"
        tools:visibility="visible" />


    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/primary"
        android:gravity="start"
        android:padding="12dp"
        android:text="@string/popup_cancel"
        android:textColor="@color/beige"
        app:layout_constraintEnd_toStartOf="@id/confirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputDialogErrorDetails" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@color/primary"
        android:gravity="end"
        android:padding="12dp"
        android:text="@string/popup_confirm"
        android:textColor="@color/beige"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintTop_toBottomOf="@id/inputDialogErrorDetails" />

</androidx.constraintlayout.widget.ConstraintLayout>